# pixie

pixie-backend/: .gitignore  main.py  pyproject.toml  schemas.py
pixie-backend/api/: chat.py  health.py
pixie-backend/app/agent/: agent.py
pixie-backend/app/api/: chat.py
pixie-backend/app/tools/: spotify_controller.py  summarize.py
pixie-backend/app/utils/: schemas.py
pixie-backend/services/: agent.py  system_prompt.py  tools.py
